List of ( lista imutável, opção mais clean para adicionar itens numa lista)