@@ -1,17 +1,16 @@
 package br.com.alura.factorymethod;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 
 public class Teste {
 
 	public static void main(String[] args) {
-		ArrayList<String> nomes = new ArrayList<>();
-		nomes.add("primeiroNome");
-		nomes.add("segundoNome");
-		nomes.add("terceiroNome");
-		List<String> nomesImutavel = Collections.unmodifiableList(nomes);
+		List<String> nomesImutavel = List.of("primeiroNome", "segundoNome", "terceiroNome");
+//		 Utilizar o VAR pode ser uma opção para evitar algo do tipo: EstacionamentoGratuito estacionado = ....
+//		 ficando apenas var estacionamento = ...
+		var cpfPorNomes = new HashMap<String, String>();
 		System.out.println(nomesImutavel);
+		System.out.println(cpfPorNomes);
 	}
 }
